<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/irishgrover"
        android:textStyle="bold"
        android:padding="16dp"
        android:text="@string/header"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/carousel1_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/home_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/judul_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/judul"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/carousel1_iv" />

            <TextView
                android:id="@+id/tahun_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tahun"
                android:textColor="#787775"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/judul_tv"/>

            <TextView
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/rating"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/tahun_tv"/>

            <TextView
                android:id="@+id/genre_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/genre"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/rating"/>

            <TextView
                android:id="@+id/synopsis_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/synopsis"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/genre_tv"/>

            <TextView
                android:id="@+id/synopsis_content_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/synopsis_content"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/synopsis_tv"/>

            <TextView
                android:id="@+id/trailer_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/trailer"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/synopsis_content_tv"/>

            <TextView
                android:id="@+id/trailer_content_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/trailer_content"
                android:textColor="@color/url"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/trailer_tv"/>

            <TextView
                android:id="@+id/release_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/release"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/trailer_content_tv"/>

            <TextView
                android:id="@+id/release_content_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/release_content"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/release_tv"/>

            <TextView
                android:id="@+id/director_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/director"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/release_content_tv"/>

            <TextView
                android:id="@+id/director_content_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/director_content"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/director_tv"/>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>